--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     "@mantine/dates": "^6.0.16",
     "@mantine/form": "^6.0.16",
     "@mantine/hooks": "^6.0.16",
+    "@reduxjs/toolkit": "^2.2.1",
     "aws-amplify": "^6.0.18",
-    "axios": "^1.4.0",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "esri-leaflet-geocoder": "2.3.3",
     "framer-motion": "^10.8.5",
@@ -28,15 +29,20 @@
     "react-accessible-accordion": "^5.0.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-dropzone-uploader": "^2.11.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-outside-click-handler": "^1.3.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.10.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "swiper": "^9.1.1",
+    "uuid": "^9.0.1",
     "world-countries": "^4.0.0"
   },
   "devDependencies": {
