--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "modal": "^1.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "redux-persist": "^6.0.0"
   }
 }
