--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-dropzone-uploader": "^2.11.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
@@ -39,6 +40,7 @@
     "react-router-dom": "^6.10.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.26.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "swiper": "^9.1.1",
